--- a/index.html
+++ b/index.html
@@ -59,9 +59,10 @@
         </div>
       </div>
     </div>
+    
 
-    <div class="nav_box" style="border-radius: 0px; justify-content: center; width: 1260px; height: 60px;">
-      <p class="arialMT" style="font-size: 12px; color: #edf2c5">Copyrights 2017 Vegetables cise / Design by Vegetables</p>
-    </div>
+    <footer class="footer_box">
+      Copyrights 2017 Vegetables cise / Design by Vegetables
+    </footer>
   </body>
 </html>
