--- a/index.html
+++ b/index.html
@@ -1,68 +1,69 @@
-
 <!DOCTYPE html>
 <html>
+  
 <head>
   <title>Vegetables</title>
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
-  <body>
-    <div class="bg">
-      <div style="padding-left: 160px; padding-right: 160px; height: 845px;">
-        <div class="TopMost">
-            <p class="logo_Vegetables">Vegetables</p>
-            <a href="" class="Social">
-              <img src="./img/btn_facebook.png" alt="">
-            </a>
-            <a href="" class="Social">
-              <img src="./img/btn_instagram.png" alt="">
-            </a>
-            <p id="line_login"></p>
-            <a class="btn_LOGIN_box" href="">
-              <div class="btn_LOGIN">LOGIN</div>
-            </a>
-            <a class="btn_JOIN_box" href="">
-              <div class="btn_LOGIN">JOIN</div>
-            </a>
-        </div>
 
-        <div class="nav_box" style="width: 940px; height: 44px; margin-top: 8px;">
-            <a href="" class="link navB arialB" style="padding-left: 30px;">Home</a>
-            <a href="" class="link navB arialB" style="padding-left: 60px;">About Us</a>
-            <a href="" class="link navB arialB" style="padding-left: 60px;">Vegetables</a>
-            <a href="" class="link navB arialB" style="padding-left: 60px;">Online</a>
-            <a href="" class="link navB arialB" style="padding-left: 60px;">Contact</a>
-        </div>
-        <img src="./img/img_main_pumpkin.png" alt="" style="margin-top: 20px; ">
-        <div class="vertical-align">
-          <div>
-              <div class="nav_box" style="width: 445px; height:45px;">
-                  <p class="link navB arialB" style="padding-left: 30px;">Vegetables</p>
-              </div>
-              <div class="Pic">
-                  <img src="./img/img_vegetables_pepper.png" alt="">
-                  <img src="./img/img_vegetables_carrot.png" alt="">
-                  <img src="./img/img_vegetables_corn.png" alt="">
-              </div>
+<body>
+  <div class="bg">
+    <div style="padding-left: 160px; padding-right: 160px; height: 845px;">
+      <div class="TopMost">
+        <p class="logo_Vegetables">Vegetables</p>
+        <a href="" class="Social">
+          <img src="./img/btn_facebook.png" alt="">
+        </a>
+        <a href="" class="Social">
+          <img src="./img/btn_instagram.png" alt="">
+        </a>
+        <p id="line_login"></p>
+        <a class="btn_LOGIN_box" href="">
+          <div class="btn_LOGIN">LOGIN</div>
+        </a>
+        <a class="btn_JOIN_box" href="">
+          <div class="btn_LOGIN">JOIN</div>
+        </a>
+      </div>
+
+      <div class="nav_box" style="width: 940px; height: 44px; margin-top: 8px;">
+        <a href="" class="link navB arialB" style="padding-left: 30px;">Home</a>
+        <a href="" class="link navB arialB" style="padding-left: 60px;">About Us</a>
+        <a href="" class="link navB arialB" style="padding-left: 60px;">Vegetables</a>
+        <a href="" class="link navB arialB" style="padding-left: 60px;">Online</a>
+        <a href="" class="link navB arialB" style="padding-left: 60px;">Contact</a>
+      </div>
+      <img src="./img/img_main_pumpkin.png" alt="" style="margin-top: 20px; ">
+      <div class="vertical-align">
+        <div>
+          <div class="nav_box" style="width: 445px; height:45px;">
+            <p class="link navB arialB" style="padding-left: 30px;">Vegetables</p>
           </div>
-          <div>
-              <div class="nav_box" style="width: 445px; height:45px;">
-                  <p class="link navB arialB" style="padding-left: 30px;">Contact</p>
-              </div>
-              <div class="body_box_contact_text">
-                  <p class="contact_text arialMT">
-                    For any questions or suggestions about Vegetables, Vegetables Club or your online order you can contact Vegetables Customer Service by phone, email or post and we'll be happy to help.
-                  </p>
-                  <div class="line_contact_text"></div>
-                  <p class="contact_text2 arialMT">E-mail : Vegatables@aaabbbccc.com<br>PHONE : +886-123-456-789</p>
-              </div>
+          <div class="Pic">
+            <img src="./img/img_vegetables_pepper.png" alt="">
+            <img src="./img/img_vegetables_carrot.png" alt="">
+            <img src="./img/img_vegetables_corn.png" alt="">
+          </div>
+        </div>
+        <div>
+          <div class="nav_box" style="width: 445px; height:45px;">
+            <p class="link navB arialB" style="padding-left: 30px;">Contact</p>
+          </div>
+          <div class="body_box_contact_text">
+            <p class="contact_text arialMT">
+              For any questions or suggestions about Vegetables, Vegetables Club or your online order you can contact
+              Vegetables Customer Service by phone, email or post and we'll be happy to help.
+            </p>
+            <div class="line_contact_text"></div>
+            <p class="contact_text2 arialMT">E-mail : Vegatables@aaabbbccc.com<br>PHONE : +886-123-456-789</p>
           </div>
         </div>
       </div>
     </div>
-    
+  </div>
+  <footer class="footer_box">
+    Copyrights 2017 Vegetables cise / Design by Vegetables
+  </footer>
+</body>
 
-    <footer class="footer_box">
-      Copyrights 2017 Vegetables cise / Design by Vegetables
-    </footer>
-  </body>
 </html>
